--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -11,7 +11,7 @@
         <p>Mon-Fri:07:00-21:00</p>
         <p>Sat-San:09:00-18:00</p>
       </div>
-      <img src="logo.png" />
+      <img src="logo.png" alt="logo"/>
       <div class="work_adress">
         <p>Kronpriencensgade 29, Esbjerg 6700,Denmark</p>
       </div>
@@ -32,43 +32,43 @@
         </div>
         <div class="assortment_container">
           <div>
-            <img src="rose.png" />
+            <img src="rose.png" alt="ROSE"/>
             <span>ROSE</span>
           </div>
           <div class="flower">
-            <img src="lilies.png" />
+            <img src="lilies.png" alt="LILIES"/>
             <span>LILIES</span>
           </div>
           <div class="flower">
-            <img src="Orchid .png" />
+            <img src="Orchid .png" alt="ORCHID"/>
             <span>ORCHID </span>
           </div>
         </div>
         <div class="assortment_container2">
           <div class="flower">
-            <img src="hydrangea.png" />
+            <img src="hydrangea.png" alt="HYDRANDEA"/>
             <span>HYDRANDEA </span>
           </div>
           <div class="flower">
-            <img src="tulips.png" />
+            <img src="tulips.png" alt="TULIPS"/>
             <span>TULIPS</span>
           </div>
           <div class="flower">
-            <img src="Peony.png" />
+            <img src="Peony.png" alt="PEONY"/>
             <span>PEONY</span>
           </div>
         </div>
         <div class="assortment_container3">
           <div class="flower">
-            <img src="chrysanthemums.png" />
+            <img src="chrysanthemums.png" alt="CHRYSANTHEMUMS"/>
             <span>CHRYSANTHEMUMS</span>
           </div>
           <div class="flower">
-            <img src="daisies.png" />
+            <img src="daisies.png" alt="DAISIES"/>
             <span>DAISIES</span>
           </div>
           <div class="flower">
-            <img src="dried flowers.png" />
+            <img src="dried flowers.png" alt="DRIED FLOWERS"/>
             <span>DRIED FLOWERS</span>
           </div>
         </div>
