--- a/flower_shop/index.html
+++ b/flower_shop/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylles/header.css"/>
     <link rel="stylesheet" href="stylles/home.css"/>
   </head>
-  <body>
+  <body class="my_theme">
     <header>
       <div class="work_time">
         <p>Mon-Fri:07:00-21:00</p>
