flower_shop. lesson_15

--- a/flower_shop_/index.html
+++ b/flower_shop_/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Flower shop</title>
     <link rel="stylesheet" href="stylles/general.css"/>
     <link rel="stylesheet" href="stylles/header.css"/>
     <link rel="stylesheet" href="stylles/home.css"/>
   </head>
-  <body class="my_theme">
+  <body>
     <header>
       <div class="work_time">
         <p>Mon-Fri:07:00-21:00</p>
         <p>Sat-San:09:00-18:00</p>
+        <hr class="line"/>
       </div>
       <img src="photo_flower/logo.png" alt="my_logo"/>
       <div class="work_adress">
@@ -22,58 +23,58 @@
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
       <a href="contact_us.html">Contact Us</a>
+      <button>MENU</button>
     </nav>
-    <main>
+    <main class="background">
       <div class="assortment">
-       <h1>ASSORTMENT</h1>
-        <div class="shoping_now">
-          <a href="contact_us.html">BOUQUETS ARE AVAILABLE</a>
+        <h1>ASSORTMENT</h1>
+      </div>
+      <p class="shoping_now">
+        <a href="contact_us.html">BOUQUETS ARE AVAILABLE</a>
+      </p>
+      <div class="order_fast">
+        <span class="order_now"> <a href="contact_us.html">Order now</a></span>
+      </div>
+      <div class="assortment_container">
+        <div class="flower">
+          <img src="photo_flower/rose.png" alt="rose"/>
+          <span>ROSE</span>
         </div>
+        <div class="flower">
+          <img src="photo_flower/lilies.png" alt="lilies"/>
+          <span>LILIES</span>
         </div>
-        <div>
-          <span class="order_now"> <a href="contact_us.html">Order now</a></span>
+        <div class="flower">
+          <img src="photo_flower/Orchid.png" alt="Orchid"/>
+          <span>ORCHID</span>
         </div>
-        <div class="assortment_container">
-          <div class="flower">
-            <img src="photo_flower/rose.png" alt="rose"/>
-            <span>ROSE</span>
-          </div>
-          <div class="flower">
-            <img src="photo_flower/lilies.png" alt="lilies"/>
-            <span>LILIES</span>
-          </div>
-          <div class="flower">
-            <img src="photo_flower/Orchid.png" alt="Orchid"/>
-            <span>ORCHID</span>
-          </div>
+      </div>
+      <div class="assortment_container2">
+        <div class="flower">
+          <img src="photo_flower/hydrangea.png" alt="hydrangea"/>
+          <span>HYDRANDEA </span>
         </div>
-        <div class="assortment_container2">
-          <div class="flower">
-            <img src="photo_flower/hydrangea.png" alt="hydrangea"/>
-            <span>HYDRANDEA </span>
-          </div>
-          <div class="flower">
-            <img src="photo_flower/tulips.png" alt="tulips"/>
-            <span>TULIPS</span>
-          </div>
-          <div class="flower">
-            <img src="photo_flower/Peony.png" alt="Peony"/>
-            <span>PEONY</span>
-          </div>
+        <div class="flower">
+          <img src="photo_flower/tulips.png" alt="tulips"/>
+          <span>TULIPS</span>
         </div>
-        <div class="assortment_container3">
-          <div class="flower">
-            <img src="photo_flower/chrysanthemums.png" alt="chrysanthemums"/>
-            <span>CHRYSANTHEMUMS</span>
-          </div>
-          <div class="flower">
-            <img src="photo_flower/daisies.png" alt="daisies"/>
-            <span>DAISIES</span>
-          </div>
-          <div class="flower">
-            <img src="photo_flower/dried flowers.png" alt="dried flowers"/>
-            <span>DRIED FLOWERS</span>
-          </div>
+        <div class="flower">
+          <img src="photo_flower/Peony.png" alt="Peony"/>
+          <span>PEONY</span>
+        </div>
+      </div>
+      <div class="assortment_container3">
+        <div class="flower">
+          <img src="photo_flower/chrysanthemums.png" alt="chrysanthemums"/>
+          <span>CHRYSANTHEMUMS</span>
+        </div>
+        <div class="flower">
+          <img src="photo_flower/daisies.png" alt="daisies"/>
+          <span>DAISIES</span>
+        </div>
+        <div class="flower">
+          <img src="photo_flower/dried flowers.png" alt="dried flowers"/>
+          <span>DRIED FLOWERS</span>
         </div>
       </div>
     </main>
