--- a/flower_shop_/index.html
+++ b/flower_shop_/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Flower shop</title>
-    <link rel="stylesheet" href="stylles/general.css"/>
+    <link rel="stylesheet" href="stylles/general.css" >
     <link rel="stylesheet" href="stylles/header.css"/>
     <link rel="stylesheet" href="stylles/home.css"/>
+    <meta name="viewport" content="width=devicewidth,initial-scale=1"/>
   </head>
   <body>
     <header>
       <div class="work_time">
         <p>Mon-Fri:07:00-21:00</p>
         <p>Sat-San:09:00-18:00</p>
-        <hr class="line"/>
       </div>
       <img src="photo_flower/logo.png" alt="my_logo"/>
       <div class="work_adress">
@@ -28,10 +27,10 @@
     <main class="background">
       <div class="assortment">
         <h1>ASSORTMENT</h1>
+        <div class="shoping_now">
+          <a href="contact_us.html">BOUQUETS ARE AVAILABLE</a>
+        </div>
       </div>
-      <p class="shoping_now">
-        <a href="contact_us.html">BOUQUETS ARE AVAILABLE</a>
-      </p>
       <div class="order_fast">
         <span class="order_now"> <a href="contact_us.html">Order now</a></span>
       </div>
@@ -75,6 +74,17 @@
         <div class="flower">
           <img src="photo_flower/dried flowers.png" alt="dried flowers"/>
           <span>DRIED FLOWERS</span>
+        </div>
+        <div class="shoping_now1">
+          <a href="contact_us.html">BOUQUETS ARE AVAILABLE</a>
+        </div>
+      </div>
+      <div class="work_time2">
+        <p>Mon-Fri:07:00-21:00</p>
+        <p>Sat-San:09:00-18:00</p>
+        <hr class="line"/>
+        <div class="work_adress2">
+          <p>Kronpriencensgade 29, Esbjerg 6700,Denmark</p>
         </div>
       </div>
     </main>
