--- a/flower_shop_/index.html
+++ b/flower_shop_/index.html
@@ -12,9 +12,8 @@
       <div class="work_time">
         <p>Mon-Fri:07:00-21:00</p>
         <p>Sat-San:09:00-18:00</p>
-        <hr class="line"/>
       </div>
-      <img src="photo_flower/logo.png" alt="my_logo"/>
+      <img src="photo_flower/logo.png" alt="my_logo" />
       <div class="work_adress">
         <p>Kronpriencensgade 29, Esbjerg 6700,Denmark</p>
       </div>
@@ -75,6 +74,17 @@
         <div class="flower">
           <img src="photo_flower/dried flowers.png" alt="dried flowers"/>
           <span>DRIED FLOWERS</span>
+        </div>
+        <div class="shoping_now1">
+          <a href="contact_us.html">BOUQUETS ARE AVAILABLE</a>
+        </div>
+      </div>
+      <div class="work_time2">
+        <p>Mon-Fri:07:00-21:00</p>
+        <p>Sat-San:09:00-18:00</p>
+        <hr class="line"/>
+        <div class="work_adress2">
+          <p>Kronpriencensgade 29, Esbjerg 6700,Denmark</p>
         </div>
       </div>
     </main>
